// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-textarea #render help should render component as expected 1`] = `"<gux-form-field-textarea hydrated=\\"\\"> <textarea slot=\\"input\\" name=\\"textarea\\" id=\\"gux-form-field-input-i\\" aria-describedby=\\"gux-form-field-help-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Default</label> <span slot=\\"help\\" id=\\"gux-form-field-help-i\\">This is a help message</span> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render help should render component as expected 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help gux-show">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (1) 1`] = `"<gux-form-field-textarea hydrated=\\"\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (2) 1`] = `"<gux-form-field-textarea hydrated=\\"\\"> <textarea slot=\\"input\\" disabled=\\"\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-disabled gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (3) 1`] = `"<gux-form-field-textarea hydrated=\\"\\"> <textarea slot=\\"input\\" required=\\"\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render input attributes should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label gux-required">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (1) 1`] = `"<gux-form-field-textarea hydrated=\\"\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render label-position should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (2) 1`] = `"<gux-form-field-textarea label-position=\\"above\\" hydrated=\\"\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render label-position should render component as expected (2) 2`] = `
<div class="gux-above gux-form-field-container">
  <div class="gux-above gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (3) 1`] = `"<gux-form-field-textarea label-position=\\"beside\\" hydrated=\\"\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render label-position should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea #render label-position should render component as expected (4) 1`] = `"<gux-form-field-textarea label-position=\\"screenreader\\" hydrated=\\"\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render label-position should render component as expected (4) 2`] = `
<div class="gux-form-field-container gux-screenreader">
  <div class="gux-form-field-label gux-screenreader">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (1) 1`] = `"<gux-form-field-textarea hydrated=\\"\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render resize should render component as expected (1) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-undefined">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (2) 1`] = `"<gux-form-field-textarea resize=\\"auto\\" hydrated=\\"\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render resize should render component as expected (2) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-auto" data-replicated-value>
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (3) 1`] = `"<gux-form-field-textarea resize=\\"manual\\" hydrated=\\"\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render resize should render component as expected (3) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-manual">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;

exports[`gux-form-field-textarea #render resize should render component as expected (4) 1`] = `"<gux-form-field-textarea resize=\\"none\\" hydrated=\\"\\"> <textarea slot=\\"input\\" id=\\"gux-form-field-input-i\\"></textarea> <label slot=\\"label\\" for=\\"gux-form-field-input-i\\">Label</label> </gux-form-field-textarea>"`;

exports[`gux-form-field-textarea #render resize should render component as expected (4) 2`] = `
<div class="gux-beside gux-form-field-container">
  <div class="gux-beside gux-form-field-label">
    <slot name="label"></slot>
  </div>
  <div class="gux-input-and-error-container">
    <div class="gux-input gux-resize-none">
      <slot name="input"></slot>
    </div>
    <div class="gux-form-field-error">
      <gux-icon hydrated="" icon-name="alert-warning-octogon"></gux-icon>
      <div class="gux-message">
        <slot name="error"></slot>
      </div>
    </div>
    <div class="gux-form-field-help">
      <div class="gux-message">
        <slot name="help"></slot>
      </div>
    </div>
  </div>
</div>
`;
